--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             
             <div class="text-animate">
                 <h3>Data Analyst</h3>
-                <span class="animate" style="--i:3"></span>
+                <!-- <span class="animate" style="--i:3"></span> -->
             </div>
 
             <p>Experience in data analysis, statistical modeling, and data visualization. Ability to work
                  in a team and communicate complex results to non-technical audiences. Proficiency in languages such as Python and R, 
                  and visualization tools like Power BI. Experience in implementing data analysis solutions for companies across various sectors.
-                <span class="animate" style="--i:4"></span></p>
+                <!-- <span class="animate" style="--i:4"></span></p> -->
 
             <div class="btn-box">
                 <a href="#" class="btn">DOWNLOAD RESUME</a>
@@ -127,7 +127,7 @@
                     </div>
 
                     
-                    <span class="animate scroll" style="--i:3"></span>
+                    <!-- <span class="animate scroll" style="--i:3"></span> -->
                 </div>
             </div>
 
