--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <a href="https://github.com/Briggitt3"><i class='bx bxl-github'></i></a>
             <!-- <a href="CV_Briggitte_Dumes.pdf"><i class='bx bx-clipboard'></i></a> -->
             <a href="https://www.linkedin.com/in/briggitte-dumes"><i class="bx bxl-linkedin"></i></a>
-            <span class="animate" style="--i:6"></span>
+            <!-- <span class="animate" style="--i:6"></span> -->
 
         </div>
         <div class="home-imgHover"></div>
-        <span class="animate home-img" style="--i:7"></span>
+       <!--  <span class="animate home-img" style="--i:7"></span> -->
 
     </section>
 
