--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <!-- home section design -->
-    <section class="home show-animate" id="home">
+    <section class="home <!-- show-animate -->" id="home">
         <div class="home-content">
             <h1>Hi, I'm  <span>Briggitte Dumes</span><span class="animate" style="--i:2"></span></h1>
             
