--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- <span class="animate" style="--i:4"></span></p> -->
 
             <div class="btn-box">
-                <a href="#" class="btn">DOWNLOAD RESUME</a>
+                <a href="Curriculum_V5.pdf" class="btn">DOWNLOAD RESUME</a>
                 <!-- <a href="#" class="btn">Let's Talk</a> -->
                 <!-- <span class="animate" style="--i:5"></span> -->
             </div>
