--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- header desing -->
     <header class="header">
-        <a href="#" class="logo">Briggitte. <span class="animate" style="--i:1"></span></a>
+        <a href="Curriculum_V5.pdf" class="logo">Briggitte. <span class="animate" style="--i:1"></span></a>
 
         <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2"></span></div>
         <nav class="navbar">
