--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio de Data Analyst</title>
+    <title>Briggitte Dumes - Portafolio</title>
     <link rel="icon" href="images/bxs-user.svg" id="icon_head" >
     <link rel="stylesheet" href="styles.css" class="stylesheet">
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
@@ -23,7 +23,7 @@
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
+            <!-- <a href="#contact">Contact</a> -->
 
             <!-- <span class="active-nav"></span>
             <span class="animate" style="--i:2"></span> -->
@@ -45,7 +45,7 @@
                 <!-- <span class="animate" style="--i:4"></span></p> -->
 
             <div class="btn-box">
-                <a href="#" class="btn">Descargar CV</a>
+                <a href="Curriculum_V5.pdf" class="btn">Descargar CV</a>
                 <!-- <a href="#" class="btn">Let's Talk</a> -->
                 <!-- <span class="animate" style="--i:5"></span> -->
             </div>
@@ -136,7 +136,8 @@
                     <div class="education-content">
                         <div class="content" >
                             <div class="year"><i class="bx bxs-calendar"> Feb 2024</i></div>
-                            <h3>Global Car Sales EDA & MRL</h3>
+                            <!-- <h3>Global Car Sales EDA & MRL</h3> -->
+                            <a href="EDA_ML.html"><h3>Global Sales EDA & MRL</h3></a>
                             <p>Análisis Exploratorio de Datos (EDA) usando Python con Pandas, NumPy, Seaborn y Matplotlib.
                             </p>
                         </div>
@@ -145,7 +146,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"> Feb 2024</i></div>
-                            <h3>Walmart Dashboards</h3>
+                            <a href="DashBoard Walmart.pdf"><h3>Walmart Dashboards</h3></a>
                             <p>Desarrolle Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
                             </p>
                         </div>
