--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"> Feb 2024</i></div>
                             <a href="DashBoard Walmart.pdf"><h3>Walmart Dashboards</h3></a>
-                            <p>Desarrolle Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
+                            <p>Desarrollé Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
                             </p>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Trabajo en equípo<span>75%</span></h3>
+                            <h3>Trabajo en equipo<span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
