--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
-            <!-- <a href="#contact">Contact</a> -->
+            <a href="https://briggittedumes.wordpress.com/">Blogs</a>
 
             <!-- <span class="active-nav"></span>
             <span class="animate" style="--i:2"></span> -->
@@ -45,7 +45,7 @@
                 <!-- <span class="animate" style="--i:4"></span></p> -->
 
             <div class="btn-box">
-                <a href="Curriculum_V6.pdf" class="btn">Descargar CV</a>
+                <a href="Curriculum_V5.pdf" class="btn">Descargar CV</a>
                 <!-- <a href="#" class="btn">Let's Talk</a> -->
                 <!-- <span class="animate" style="--i:5"></span> -->
             </div>
@@ -147,7 +147,7 @@
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"> Feb 2024</i></div>
                             <a href="DashBoard Walmart.pdf"><h3>Walmart Dashboards</h3></a>
-                            <p>Desarrollé Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
+                            <p>Desarrolle Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
                             </p>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Trabajo en equipo<span>75%</span></h3>
+                            <h3>Trabajo en equípo<span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -297,4 +297,8 @@
 
     <script src="script.js"></script>
 </body>
+
+<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/e8eb973f-4ffa-49a7-a742-87a16d3b3fa3/webchat/config.js" defer></script>
+    
 </html>
