--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2"></span></div>
         <nav class="navbar">
             <a href="#home" class="active">Inicio</a>
-            <a href="#about">About</a>
-            <a href="#education">Education</a>
+            <a href="#about">Sobre mí</a>
+            <a href="#education">Educación</a>
             <a href="#skills">Skills</a>
             <a href="https://briggittedumes.wordpress.com/">Blogs</a>
 
@@ -79,7 +79,7 @@
 
     <!-- about section design -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1"></span>
+        <h2 class="heading">Sobre <span>Mí</span><span class="animate scroll" style="--i:1"></span>
         </h2>
         <div class="about-image">
             <img src="images/yo.jpeg" alt="">
