--- a/index.html
+++ b/index.html
@@ -303,7 +303,17 @@
     <script src="script.js"></script>
 </body>
 
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/e8eb973f-4ffa-49a7-a742-87a16d3b3fa3/webchat/config.js" defer></script>
-    
+<script type="text/javascript">
+    (function(d, t) {
+        var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+        v.onload = function() {
+          window.voiceflow.chat.load({
+            verify: { projectID: '65fdc6f4413355328e26ebff' },
+            url: 'https://general-runtime.voiceflow.com',
+            versionID: 'production'
+          });
+        }
+        v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+    })(document, 'script');
+  </script>   
 </html>
