--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                             </p> -->
                         </div>
                     </div>
+                    
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"> Ene 2024</i></div>
+                            <h3>Python 3: Análisis y visualización de datos - Udemy</h3>
+                           <!--  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, asperiores illo cum unde, dolore accusantium natus ipsam nostrum tempore praesentium repudiandae doloribus assumenda soluta non id ut quod distinctio alias!
+                            </p> -->
+                        </div>
+                    </div>
+
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"> Ene 2024</i></div>
@@ -138,6 +148,16 @@
             <div class="education-column">
                 <h3 class="title">Proyectos<span class="animate scroll" style="--i:5"></span></h3>
                 <div class="education-box">
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"> Abr 2024</i></div>
+                            <a href="#"><h3>IA Chatbot</h3></a>
+                            <p>Desarrollé un bot potenciado con Inteligencia Artificial capaz de ofrecer información relevante sobre mi perfil profesional, siendo capaz de responder incluso a preguntas tipo entrevista como lo haría yo misma. Puedes probarlo en mi portafolio.
+                            </p>
+                        </div>
+                    </div>
+
                     <div class="education-content">
                         <div class="content" >
                             <div class="year"><i class="bx bxs-calendar"> Feb 2024</i></div>
@@ -152,10 +172,12 @@
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"> Feb 2024</i></div>
                             <a href="DashBoard Walmart.pdf"><h3>Walmart Dashboards</h3></a>
-                            <p>Desarrolle Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
+                            <p>Desarrollé un Dashboards con datos de Walmart enfoncandome en el Análisis de ventas, la Segmentación de clientes y el Análisis de productos, utilizando como herramienta de visualización Power Bi.
                             </p>
                         </div>
                     </div>
+
+                    
 
                     <!-- <div class="education-content">
                         <div class="content">
