--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"> Abr 2024</i></div>
-                            <a href="#"><h3>IA Chatbot</h3></a>
+                            <a><h3>IA Chatbot - "Briggitte AI 2.0"</h3></a>
                             <p>Desarrollé un bot potenciado con Inteligencia Artificial capaz de ofrecer información relevante sobre mi perfil profesional, siendo capaz de responder incluso a preguntas tipo entrevista como lo haría yo misma. Puedes probarlo en mi portafolio.
                             </p>
                         </div>
