--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="about-content">
             <h3>Estudiante de <span>ADE</span><span class="animate scroll" style="--i:3"></span></h3>
-            <p>Con una visión estratégica y un enfoque en la innovación. Mi educación y habilidades técnicas en programación y análisis de datos me preparan para afrontar los retos de la asesoría y consultoría empresarial. Estoy comprometida con el objetivo de liderar la transformación digital en las organizaciones, convirtiéndome en una catalizadora del cambio que impulsa a las empresas hacia la eficiencia y la competitividad en la era moderna. Este portafolio es una ventana a mi trayectoria profesional, mis competencias y la pasión que me impulsa a contribuir al progreso del entorno empresarial.</span></p>
+            <p>Con una visión estratégica y un enfoque en la innovación. Mi educación y habilidades técnicas en programación y análisis de datos me preparan para afrontar los retos de la asesoría y consultoría empresarial. Estoy comprometida con el objetivo de liderar la transformación digital en las organizaciones, convirtiéndome en una catalizadora del cambio que impulsa a las empresas hacia la eficiencia y la competitividad en la era moderna. Este portafolio es una ventana a mi trayectoria profesional, mis competencias y la pasión que me impulsa a contribuir al progreso del entorno empresarial. Puedes ver las actividades en las que he participado en <span><a href="https://briggittedumes.wordpress.com/">mi blog</a></span></span></p>
             <!-- <div class="btn-box btns">
                 <a href="#" class="btn"> Read More</a>
                 <span class="animate scroll" style="--i:5"></span>
@@ -190,6 +190,7 @@
                     <span class="animate scroll" style="--i:6"></span>
                 </div>
             </div>
+            
         </div>
     </section>
 
