--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h2 class="heading">Sobre <span>Mí</span><span class="animate scroll" style="--i:1"></span>
         </h2>
         <div class="about-image">
-            <img src="images/yo.jpeg" alt="">
+            <img src="images/IMG_0727.jpeg" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2"></span>
         </div>
