--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!-- <span class="animate" style="--i:4"></span></p> -->
 
             <div class="btn-box">
-                <a href="Curriculum_V9.pdf" class="btn">Curriculum</a>
+                <a href="#" class="btn">contactar</a>
                 <!-- <a href="#" class="btn">Let's Talk</a> -->
                 <!-- <span class="animate" style="--i:5"></span> -->
             </div>
