--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1><span>Briggitte Dumes</span><span class="animate" style="--i:2"></span></h1>
             
             <div class="text-animate">
-                <h3>Innovadora con IA</h3>
+                <h3>Analista Financiera Junior</h3>
                 <!-- <span class="animate" style="--i:3"></span> -->
             </div>
             <p>En la intersección de la tecnología y el comercio, me encuentro como estudiante de ADE en la Universidad de Alicante, donde la innovación empresarial y la inteligencia artificial son el norte de mi brújula profesional. Con habilidades en programación y análisis de datos, y un ojo puesto en el business intelligence y el marketing digital, me dedico a descifrar el código del éxito empresarial.
